--- a/css/master.css
+++ b/css/master.css
@@ -1,5 +1,7 @@
 body {
-  background-color: #E1F154;
+background-image: url(file:///Users/solenegautier/Documents/ECV/Test/web-d4-pollinisation/flower.png);
+background-repeat: no-repeat;
+background-size: 100%;
 }
 
 .next-link {
@@ -11,7 +13,7 @@ body {
   border-radius: 10em;
   z-index: 3;
   position: relative;
-  margin-right: auto;
+text-align: right;
 }
 
 h1 {
@@ -19,18 +21,17 @@ h1 {
   font-size: 130px;
   text-align: center;
   padding-bottom: 5px;
-  padding-top: 100px;
-  margin-top: 40px;
+  padding-top: 130px;
+  margin-top: 90px;
   animation-duration: 2s;
   animation-name: slidein;
   animation-direction: alternate;
-font-family: 'Alfa Slab One', cursive;
 
 }
 
 #arrow-animation {
   size: 70px;
-  padding-top: 25px;
+  padding-top: 10px;
   padding-left: 700px;
 }
 
@@ -39,12 +40,15 @@ h2 {
   font-family: helvetica;
   padding-left: 100px;
   padding-right: 600px;
-  padding-top: 900px;
+  padding-top: 940px;
+  margin-top: 110px;
   text-align: left;
   margin-right: 140px;
   margin-left: 60px;
   position: absolute;
   z-index: 2;
+  color: #44AB96;
+  font-family: serif;
 }
 
 img {
@@ -62,6 +66,7 @@ img {
 
 #element1 {
   padding-top: 780px;
+  color: #DBE50C;
 }
 
 #element3 {
@@ -71,6 +76,8 @@ img {
   padding-top: 400px;
   text-align: left;
   animation: none;
+  color: #44AB96;
+
 }
 
 #texte4 {
@@ -78,32 +85,42 @@ img {
   font-family: helvetica;
   font-size: 20px;
   font-weight: lighter;
+  padding-left: 90px;
+  padding-right: 400px;
+  margin-right: 400px;
+  margin-left: 70px;
 }
 
 h3 {
-  font-size: 30px: padding-top:100px;
+  font-size: 30px;
+  padding-top:100px;
   z-index: 1;
 }
 
-.imageabeille {
-  padding-top: 40px;
-  padding-bottom: 400px;
+#element10 {
+  padding-top: 90px;
+  padding-bottom: 300px;
   padding-right: 400px;
+max-width: 100%;
+height: auto;
+position: absolute;
 }
 
 #fleur {
   padding-top: 1550px;
   transform: translate(10px);
   translate(10px);
-  transition-timing-function: cubic-bezier(.29, 1.01, 1, -0.68);
   transform: skew(20deg);
   transform: rotate(20deg);
   padding-left: 700px;
   padding-right: 50px;
   -webkit-animation: spin 4s linear infinite;
   -moz-animation: spin 4s linear infinite;
-  animation: spin 4s linear infinite;
+  animation: spin 6s linear infinite;
+  color: #DBE50C;
+
 }
+
 
 @-moz-keyframes spin {
   100% {
@@ -180,12 +197,9 @@ h3 {
   margin-top: 50px;
   font-weight: lighter;
 
-  .texte5 {
-    font-size: 50px;
-    float: left;
-    animation: none;
-    padding-left: 90px;
-  }
+}
+
+
 
   #texte6 {
     font-weight: lighter;
@@ -197,7 +211,79 @@ h3 {
   }
 
 
-.texte10 {
-font-size: 30px;
 
-}
+
+  ul {
+    list-style-type: none;
+    margin: 40px;
+    padding: 0px;
+    overflow:hidden;
+    background-color: black;
+    background-position: center;
+    padding-right: 30px;
+
+  }
+
+  li {
+    float: left;
+    padding-left: 110px;
+    text-align: center;
+
+
+  }
+
+  li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 30px 56px;
+    text-decoration: none;
+    font-family: helvetica;
+    font-style: 20px;
+    padding-left: 70px;
+
+
+  }
+
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: #44AB96;
+    background-position: center;
+
+  }
+
+  li.dropdown {
+    background-position: center;
+    text-align: center;
+
+
+
+  }
+
+  .dropdown-content {
+    display: none;
+    position: relative;
+    background-color: black;
+    min-width: 160px;
+    z-index: 1;
+    background-position: center;
+    text-align: center;
+  }
+
+  .dropdown-content a {
+    color: #44AB96;
+    padding: 30px 30px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+    background-position: center;
+    text-align: center;
+  }
+
+  .dropdown-content a:hover {background-color: black;}
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+    background-position: center;
+
+
+  }  
