--- a/css/master.css
+++ b/css/master.css
@@ -1,19 +1,21 @@
 body {
-background-image: url(file:///Users/solenegautier/Documents/ECV/Test/web-d4-pollinisation/flower.png);
-background-repeat: no-repeat;
-background-size: 100%;
+  background-image: url(https://cdn.pixabay.com/photo/2020/03/30/18/03/flower-4985011_1280.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 .next-link {
   background: white;
-  color: black;
+  color: white;
   font-size: 1em;
   padding: 10px;
-  text-decoration: none;
+  background-color: #44AB96;
+  background-position: center;
   border-radius: 10em;
   z-index: 3;
   position: relative;
-text-align: right;
+  text-align: center;
+  font-family: helvetica;
 }
 
 h1 {
@@ -26,6 +28,20 @@ h1 {
   animation-duration: 2s;
   animation-name: slidein;
   animation-direction: alternate;
+}
+
+
+
+
+
+#element7 {
+
+float: right;
+position: relative;
+padding-top: 300px;
+margin-top: 200px;
+padding-right: 40px;
+size:100px;
 
 }
 
@@ -77,7 +93,6 @@ img {
   text-align: left;
   animation: none;
   color: #44AB96;
-
 }
 
 #texte4 {
@@ -93,17 +108,16 @@ img {
 
 h3 {
   font-size: 30px;
-  padding-top:100px;
+  padding-top: 100px;
   z-index: 1;
 }
 
-#element10 {
-  padding-top: 90px;
-  padding-bottom: 300px;
-  padding-right: 400px;
-max-width: 100%;
-height: auto;
+.element10 {
+width: 100%;
+height: 300px;
 position: absolute;
+
+
 }
 
 #fleur {
@@ -118,9 +132,7 @@ position: absolute;
   -moz-animation: spin 4s linear infinite;
   animation: spin 6s linear infinite;
   color: #DBE50C;
-
 }
-
 
 @-moz-keyframes spin {
   100% {
@@ -168,8 +180,9 @@ h3 {
   }
 }
 
-#video {
-  padding-left: 500px;
+#videoabeille {
+  padding-left: 350px;
+  padding-top: 400px;
 }
 
 #texte1 {
@@ -196,94 +209,100 @@ h3 {
   margin-left: 70px;
   margin-top: 50px;
   font-weight: lighter;
+}
 
+#texte6 {
+  font-weight: lighter;
+  padding-left: 90px;
+  padding-right: 100px;
+  float: left;
+  animation: none;
+  padding-right: 400px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 40px;
+  padding: 0px;
+  overflow: hidden;
+  background-color: black;
+  background-position: center;
+  padding-right: 30px;
+}
+
+li {
+  float: left;
+  padding-left: 110px;
+  text-align: center;
+}
+
+li a, .dropbtn {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 30px 56px;
+  text-decoration: none;
+  font-family: helvetica;
+  font-style: 20px;
+  padding-left: 70px;
+}
+
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: #44AB96;
+  background-position: center;
+}
+
+li.dropdown {
+  background-position: center;
+  text-align: center;
+}
+
+.dropdown-content {
+  display: none;
+  position: relative;
+  background-color: black;
+  min-width: 160px;
+  z-index: 1;
+  background-position: center;
+  text-align: center;
+}
+
+.dropdown-content a {
+  color: #44AB96;
+  padding: 30px 30px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  background-position: center;
+  text-align: center;
+}
+
+.dropdown-content a:hover {
+  background-color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  background-position: center;
 }
 
 
+#texte7 {
 
-  #texte6 {
-    font-weight: lighter;
-    padding-left: 90px;
-    padding-right: 100px;
-    float: left;
-    animation: none;
-    padding-right: 400px;
-  }
+  padding-left: 130px;
+  padding-right: 820px;
 
+  margin-right: 100px;
+  margin-left: 140px;
+  float: center;
+  font-size: 20px;
+  font-family: helvetica;
+  background-color: #44AB96;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-right: 100px;
+  text-align: center;
+  background-position: center;
+  position: absolute;
 
-
-
-  ul {
-    list-style-type: none;
-    margin: 40px;
-    padding: 0px;
-    overflow:hidden;
-    background-color: black;
-    background-position: center;
-    padding-right: 30px;
-
-  }
-
-  li {
-    float: left;
-    padding-left: 110px;
-    text-align: center;
-
-
-  }
-
-  li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 30px 56px;
-    text-decoration: none;
-    font-family: helvetica;
-    font-style: 20px;
-    padding-left: 70px;
-
-
-  }
-
-  li a:hover, .dropdown:hover .dropbtn {
-    background-color: #44AB96;
-    background-position: center;
-
-  }
-
-  li.dropdown {
-    background-position: center;
-    text-align: center;
-
-
-
-  }
-
-  .dropdown-content {
-    display: none;
-    position: relative;
-    background-color: black;
-    min-width: 160px;
-    z-index: 1;
-    background-position: center;
-    text-align: center;
-  }
-
-  .dropdown-content a {
-    color: #44AB96;
-    padding: 30px 30px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
-    background-position: center;
-    text-align: center;
-  }
-
-  .dropdown-content a:hover {background-color: black;}
-
-  .dropdown:hover .dropdown-content {
-    display: block;
-    background-position: center;
-
-
-  }
+}
