--- a/css/master2.css
+++ b/css/master2.css
@@ -1,6 +1,7 @@
 body {
-  background-color: white;
-}
+  background-image: url(https://cdn.pixabay.com/photo/2020/02/20/17/57/flower-4865379_1280.png);
+  background-repeat: no-repeat;
+  background-size: 100%;}
 
 #titreetape {
   font-style: bold;
@@ -12,27 +13,31 @@ body {
   animation-duration: 2s;
   animation-name: slidein;
   animation-direction: alternate;
-  font-family: 'Alfa Slab One', cursive;
+  font-family: 'Alfa Slab One';
 }
 
 #texte5 {
-  margin-left: 70px;
-  padding-left: 90px;
-  padding-right: 400px;
-  margin-right: 400px;
+  font-size: 50px;
+  text-align: center;
+  background-color: #44AB96;
+  margin-left: 370px;
+  margin-right: 370px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 #texte6 {
-  margin-left: 70px;
-  padding-left: 90px;
-  padding-right: 400px;
-  margin-right: 400px;
+text-align: center;
+padding-left: 250px;
+padding-right: 250px;
   font-size: 20px;
   font-family: helvetica;
   font-weight: lighter;
 }
 
 #imageabeille2 {
-padding-left: 100px;
+padding-left: 400px;
 
 }
